force-app/main/default/objects/Baseball_Play__e/Baseball_Play__e.object-meta.xml
<CustomObject>
    <description>An event or action in a baseball game</description>
    <label>Baseball Play</label>
    <pluralLabel>Baseball Plays</pluralLabel>
</CustomObject>