force-app/main/default/objects/Baseball_Play__e/fields/Away_Score__c.field-meta.xml
<CustomField>
    <fullName>Away_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Score of the away team</description>
    <label>Away Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>