force-app/main/default/objects/Baseball_Play__e/fields/Away_Team_Mascot__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Mascot__c</fullName>
    <description>Mascot for the away team</description>
    <label>Away Team Mascot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>