force-app/main/default/objects/Baseball_Play__e/fields/Away_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Name__c</fullName>
    <description>Name of the away team</description>
    <label>Away Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>