force-app/main/default/objects/Baseball_Play__e/fields/Ball_Count__c.field-meta.xml
<CustomField>
    <fullName>Ball_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of balls for the current batter</description>
    <label>Ball Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>