force-app/main/default/objects/Baseball_Play__e/fields/Game_Id__c.field-meta.xml
<CustomField>
    <fullName>Game_Id__c</fullName>
    <description>Id of game record</description>
    <label>Game Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>