force-app/main/default/objects/Baseball_Play__e/fields/Home_Score__c.field-meta.xml
<CustomField>
    <fullName>Home_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Score of the home team</description>
    <label>Home Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>