force-app/main/default/objects/Baseball_Play__e/fields/Home_Team_Mascot__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Mascot__c</fullName>
    <description>Mascot of the home team</description>
    <label>Home Team Mascot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>