force-app/main/default/objects/Baseball_Play__e/fields/Home_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Name__c</fullName>
    <description>Name of home team</description>
    <label>Home Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>