force-app/main/default/objects/Baseball_Play__e/fields/Inning__c.field-meta.xml
<CustomField>
    <fullName>Inning__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Current inning</description>
    <label>Inning</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>