force-app/main/default/objects/Baseball_Play__e/fields/Is_Bottom__c.field-meta.xml
<CustomField>
    <fullName>Is_Bottom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is currently the bottom of the inning</description>
    <label>Is Bottom</label>
    <type>Checkbox</type>
</CustomField>