force-app/main/default/objects/Baseball_Play__e/fields/Is_Top__c.field-meta.xml
<CustomField>
    <fullName>Is_Top__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the top of the inning</description>
    <label>Is Top</label>
    <type>Checkbox</type>
</CustomField>