force-app/main/default/objects/Baseball_Play__e/fields/Out_Count__c.field-meta.xml
<CustomField>
    <fullName>Out_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of outs in the current half inning</description>
    <label>Out Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>