force-app/main/default/objects/Baseball_Play__e/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Result of the action or play</description>
    <label>Outcome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>