force-app/main/default/objects/Baseball_Play__e/fields/Strike_Count__c.field-meta.xml
<CustomField>
    <fullName>Strike_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of strikes for the current batter</description>
    <label>Strike Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>